test/fixtures/errors/no-return-loader.js
/** @type {import("../../../../").LoaderDefinition} */
module.exports = function () {};
